# cmd/docs/swagger.json
@@ -7,14 +7,14 @@
         "version": "1.0"
     },
     "paths": {
-        "/admin/all-users": {
-            "get": {
+        "/admin/as-user/{id}": {
+            "post": {
                 "security": [
                     {
                         "BearerAuth": []
                     }
                 ],
-                "description": "Найти юзер(а/ов) по фамилии(СДЕЛАТЬ ЕЩЁ ПО ПОЧТЕ,ИМЕНИ....)",
+                "description": "Только админ",
                 "consumes": [
                     "application/json"
                 ],
@@ -24,18 +24,67 @@
                 "tags": [
                     "Admin"
                 ],
-                "summary": "findUsers",
+                "summary": "Зайти под пользователем",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Фамилия",
-                        "name": "opt",
-                        "in": "query"
+                        "type": "integer",
+                        "description": "ID пользователя, под которым надо войти",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Найденный юзер",
+                        "description": "JWT токен",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Неверные параметры",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/get-all": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "ФИО/Название стартапа",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Admin"
+                ],
+                "summary": "Найти всех пользователей по параметрам",
+                "parameters": [
+                    {
+                        "description": "Параметры поиска",
+                        "name": "searchParams",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/AdminService.SearchParams"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Найденные пользователи",
                         "schema": {
                             "type": "array",
                             "items": {
@@ -44,7 +93,50 @@
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Неверные параметры",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/search-one/{id}": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Admin"
+                ],
+                "summary": "Найти пользователя по ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID пользователя",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Найденный юзер",
+                        "schema": {
+                            "$ref": "#/definitions/userModel.User"
+                        }
+                    },
+                    "400": {
+                        "description": "Пользователь по ID не найден",
                         "schema": {
                             "type": "string"
                         }
@@ -262,6 +354,19 @@
         }
     },
     "definitions": {
+        "AdminService.SearchParams": {
+            "type": "object",
+            "properties": {
+                "HaveStartups": {
+                    "type": "boolean",
+                    "example": false
+                },
+                "NotConfirmed": {
+                    "type": "boolean",
+                    "example": false
+                }
+            }
+        },
         "authModel.RequestSignInPayload": {
             "type": "object",
             "required": [
@@ -270,11 +375,13 @@
             ],
             "properties": {
                 "email": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "admin@mail.ru"
                 },
                 "password": {
                     "type": "string",
-                    "minLength": 8
+                    "minLength": 8,
+                    "example": "12345678"
                 }
             }
         },
@@ -431,6 +538,9 @@
         "userModel.User": {
             "type": "object",
             "properties": {
+                "confirmed": {
+                    "type": "boolean"
+                },
                 "email": {
                     "type": "string"
                 },
@@ -454,6 +564,12 @@
                 },
                 "role": {
                     "type": "string"
+                },
+                "startUps": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/startUpModel.StartUp"
+                    }
                 },
                 "userDetails": {
                     "$ref": "#/definitions/userModel.UserDetails"
